Ajuste responsivo linha do tempo e transição energetica

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 
                 <h1 class="font-title text-5xl font-bold">Transição Energética</h1>
 
-                <div class="w-2/3 font-text text-xl flex flex-col gap-5 text-gray-200/90">
+                <div class="font-text text-xl flex flex-col gap-5 text-gray-200/90 sm:w-full lg:w-2/3">
                     <p>A transição energética dos combustíveis fósseis para fontes sustentáveis representa uma
                         mudança
                         essencial para garantir o futuro do nosso planeta. Diante do impacto ambiental dos combustíveis
@@ -112,20 +112,20 @@
         </div>
     </section>
 
-    <section class="flex flex-col max-w-full pt-10 pb-10 items-center justify-center sm:gap-8 lg:-space-y-8">
+    <section class="flex flex-col max-w-full pt-10 pb-10 items-center justify-center sm:gap-8 lg:-space-y-8 ">
         <div class="max-w-7xl mx-auto flex flex-row justify-between gap-5 text-white">
             <section class="w-full flex flex-row gap-10 sm:flex-col lg:flex-row">
-                <div class="img w-1/2 flex flex-col gap-4 hidden-left sm:order-3 lg:order-1">
+                <div class="img w-1/2 flex flex-col gap-4 hidden-left sm:order-3 lg:order-1 sm:w-full">
                     <img src="./imgs/linha-do-tempo-fourier.png"
-                        alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="max-w-md">
-                    <p class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
+                        alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="sm:mx-auto">
+                    <p class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base sm:max-w-xs">
                         Joseph Fourier descreve o "efeito estufa" como um fenômeno natural que mantém a Terra aquecida,
                         um conceito fundamental para o entendimento das mudanças climáticas.</p>
                 </div>
 
-                <div class="linha-do-tempo-line h-full w-1 bg-gray-50/55 sm:hidden lg:flex lg:order-1"></div>
+                <div class="linha-do-tempo-line h-full w-2 bg-gray-50/55 sm:hidden lg:flex lg:order-1"></div>
 
-                <div class="txt font-text text-8xl font-bold w-1/2 hidden-left sm:order-first lg:order-1">
+                <div class="txt font-text text-8xl font-bold w-1/2 hidden-left sm:text-center sm:w-full sm:order-first lg:order-1">
                     1824
                 </div>
             </section>
