--- a/src/index.html
+++ b/src/index.html
@@ -224,6 +224,10 @@
                     class="font-bold">3°C.</span></p>
         </section>
 
+        <div class="chart-container" style=" height:50vh; width:50vw; margin: 0 auto;">
+            <canvas id="line-chart"></canvas>
+        </div>
+
         <section class="max-w-7xl max-h-auto py-32 flex flex-row font-text sm:text-center md:px-8">
             <div class="max-w-full mx-auto flex flex-col justify-start gap-4 items-start lg:text-left">
                 <h1 class="font-bold text-5xl text-white mb-4">POR ISSO, NÓS DA VOLTARIS DECIDIMOS QUE:</h1>
@@ -339,9 +343,11 @@
         </div>
     </footer>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./js/scroll.js"></script>
     <script src="./js/sanduiche.js"></script>
+    <script src="./js/grafico.js"></script>
+    
 </body>
 
 </html>
