--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/scroll.css">
     <link rel="stylesheet" href="./css/form.css">
+    <link rel="stylesheet" href="./css/arrow.css">
 </head>
 
 <body class="bg-dark-bg">
 
-    <section class="h-screen max-w-full">
+    <section class="max-w-full">
         <video class="absolute top-0 left-0 w-full h-full object-cover -z-10" autoplay muted loop>
             <source src="./videos/bg-video-energy.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
@@ -60,9 +61,17 @@
 
     </section>
 
+    <section class="h-screen max-w-full flex flex-row items-center">
+        <div class="w-1/2 mx-auto flex justify-end gap-4 flex-col h-1/2 sm:w-full">
+            <p class="font-title text-5xl leading-tight text-main-green text-wrap text-center sm:text-2xl md:text-3xl lg:text-4xl 2xl:text-5xl">Juntos podemos renovar a maneira que consumimos energia!</p>
+            <div class="flex justify-start items-start">
+                <a href=""><img src="./imgs/seta-para-baixo-verde-menu-hero.png" alt="" class="arrow-down"></a>
+            </div>
+        </div>
+    </section>
+
     <section class="max-w-full max-h-auto bg-dark-bg pt-24 flex flex-row justify-around">
-        <div
-            class="max-w-full mx-auto flex justify-center gap-4 items-center sm:flex-col sm:text-center lg:text-left 2xl:flex-row 2xl:px-28">
+        <div class="max-w-full mx-auto flex justify-center gap-4 items-center sm:flex-col sm:text-center lg:text-left 2xl:flex-row 2xl:px-28">
             <section class="w-2/3 text-white flex flex-col gap-8 sm:mb-8">
 
                 <h1 class="font-title text-5xl font-bold">Transição Energética</h1>
