adição do formulário de domain

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,9 @@
 
     <section class="h-screen max-w-full flex flex-row items-center">
         <div class="w-1/2 mx-auto flex justify-end gap-4 flex-col h-1/2 sm:w-full">
-            <p class="font-title text-5xl leading-tight text-main-green text-wrap text-center sm:text-2xl md:text-3xl lg:text-4xl 2xl:text-5xl">Juntos podemos renovar a maneira que consumimos energia!</p>
+            <p
+                class="font-title text-5xl leading-tight text-main-green text-wrap text-center sm:text-2xl md:text-3xl lg:text-4xl 2xl:text-5xl">
+                Juntos podemos renovar a maneira que consumimos energia!</p>
             <div class="flex justify-start items-start">
                 <a href=""><img src="./imgs/seta-para-baixo-verde-menu-hero.png" alt="" class="arrow-down"></a>
             </div>
@@ -71,12 +73,13 @@
     </section>
 
     <section class="max-w-full max-h-auto bg-dark-bg pt-24 flex flex-row justify-around">
-        <div class="max-w-full mx-auto flex justify-center gap-4 items-center sm:flex-col sm:text-center lg:text-left 2xl:flex-row 2xl:px-28">
-            <section class="w-2/3 text-white flex flex-col gap-8 sm:mb-8">
+        <div
+            class="max-w-full mx-auto flex justify-center gap-4 items-center sm:flex-col sm:text-center lg:text-left 2xl:flex-row 2xl:px-28">
+            <section class=" text-white flex flex-col gap-8 sm:mb-8 w-1/2">
 
-                <h1 class="font-title text-5xl font-bold">Transição Energética</h1>
+                <h1 class="font-title text-5xl font-bold w-full">Transição Energética</h1>
 
-                <div class="font-text text-xl flex flex-col gap-5 text-gray-200/90 sm:w-full lg:w-2/3">
+                <div class="font-text text-xl flex flex-col gap-5 text-gray-200/90 sm:w-full lg:w-full">
                     <p>A transição energética dos combustíveis fósseis para fontes sustentáveis representa uma
                         mudança
                         essencial para garantir o futuro do nosso planeta. Diante do impacto ambiental dos combustíveis
@@ -96,8 +99,8 @@
                     <p class="font-bold text-xl text-white">VENHA COM NÓS E RECEBA UM BRINDES E UM CERTIFICADO</p>
                     <div class="mt-10">
                         <a href=""
-                            class="py-4 px-3 font-bold text-xl bg-main-green rounded-3xl text-black hover:bg-dark-bg hover hover:border-main-green hover:text-white hover:border transition-all">QUERO
-                            PARTICIPAR!</a>
+                            class="py-4 px-3 border border-main-green font-bold text-xl bg-main-green rounded-3xl text-black hover:bg-dark-bg hover hover:border-main-green hover:text-white hover:border transition-all">Quero
+                            Participar!</a>
                     </div>
                 </div>
             </section>
@@ -127,14 +130,16 @@
                 <div class="img w-1/2 flex flex-col gap-4 hidden-left sm:order-3 lg:order-1 sm:w-full">
                     <img src="./imgs/linha-do-tempo-fourier.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="sm:mx-auto">
-                    <p class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base sm:max-w-xs">
+                    <p
+                        class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base sm:max-w-xs">
                         Joseph Fourier descreve o "efeito estufa" como um fenômeno natural que mantém a Terra aquecida,
                         um conceito fundamental para o entendimento das mudanças climáticas.</p>
                 </div>
 
                 <div class="linha-do-tempo-line h-full w-2 bg-gray-50/55 sm:hidden lg:flex lg:order-1"></div>
 
-                <div class="txt font-text text-8xl font-bold w-1/2 hidden-left sm:text-center sm:w-full sm:order-first lg:order-1">
+                <div
+                    class="txt font-text text-8xl font-bold w-1/2 hidden-left sm:text-center sm:w-full sm:order-first lg:order-1">
                     1824
                 </div>
             </section>
@@ -151,7 +156,8 @@
                 <div class="img w-1/2 flex flex-col gap-4 hidden-right">
                     <img src="./imgs/linha-do-tempo-svante-arrhenius.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="max-w-md">
-                    <p class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
+                    <p
+                        class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
                         Svante Arrhenius identifica que a
                         queima de
                         carvão aumenta o efeito estufa, sugerindo que isso poderia aquecer o planeta.</p>
@@ -164,7 +170,8 @@
                 <div class="img w-1/2 flex flex-col gap-4 hidden-left sm:order-3 lg:order-1">
                     <img src="./imgs/linha-do-tempo-efeito-estufa.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="max-w-md">
-                    <p class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
+                    <p
+                        class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
                         Joseph Fourier descreve o "efeito
                         estufa"
                         como um fenômeno natural que mantém a Terra aquecida, um conceito fundamental para o
@@ -190,7 +197,9 @@
                 <div class="img w-1/2 flex flex-col gap-4 hidden-right">
                     <img src="./imgs/linha-do-tempo-IPCC.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="max-w-md">
-                    <p class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">A
+                    <p
+                        class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
+                        A
                         ONU cria o IPCC (Painel
                         Intergovernamental sobre Mudanças Climáticas) para estudar e informar sobre as mudanças
                         climáticas.</p>
@@ -203,7 +212,9 @@
                 <div class="img w-1/2 flex flex-col gap-4 hidden-left sm:order-3 lg:order-1">
                     <img src="./imgs/linha-do-tempo-kyoto.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="max-w-md">
-                    <p class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">O
+                    <p
+                        class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
+                        O
                         Protocolo de Kyoto estabelece
                         metas para
                         redução das emissões de gases de efeito estufa em 5,2%, marcando um compromisso
@@ -219,10 +230,10 @@
             </section>
         </div>
 
-        <section
-            class="max-w-2xl flex flex-col mt-12 items-center justify-center gap-4 p-3 ">
+        <section class="max-w-2xl flex flex-col mt-12 items-center justify-center gap-4 p-3 ">
             <h1 class="text-main-green font-bold font-text text-9xl sm:text-7xl lg:text-9xl lg:mt-8">PRESENTE</h1>
-            <p class="text-gray-200/90 font-text text-lg sm:text-center lg:text-left">O protocolo de Kyoto não foi ratificado pelos Estados
+            <p class="text-gray-200/90 font-text text-lg sm:text-center lg:text-left">O protocolo de Kyoto não foi
+                ratificado pelos Estados
                 Unidos e
                 depois foi substituído pelo acordo de Paris. EM 04/11/2020 os EUA saíram do acordo de Paris e só
                 retornaram em 2021.
@@ -231,16 +242,25 @@
                 gases de efeito estufa estão nos níveis mais altos em 2 milhões de anos.
                 A ONU alerta que, sem medidas concretas, o mundo pode chegar a um aumento de <span
                     class="font-bold">3°C.</span></p>
-            <p class="text-gray-200/90 font-text text-lg sm:text-center lg:text-left"> A baixo, temos um gráfico que ilustra a projeção para o aumento da tempertura média global, em relação à média existente durante o período pré-industrial:</p>
+            <p class="text-gray-200/90 font-text text-lg sm:text-center lg:text-left"> A baixo, temos um gráfico que
+                ilustra a projeção para o aumento da tempertura média global, em relação à média existente durante o
+                período pré-industrial:</p>
         </section>
 
         <div class="chart-container max-w-2xl flex flex-col mt-12 items-center justify-center gap-4 p-3">
             <canvas id="line-chart"></canvas>
 
-            <p class="text-gray-200/90 font-text text-lg sm:text-center lg:text-left"> Nele podemos ver em primeira instância, o limite de temperatura imposto pelo acordo de Paris, sendo que esse mesmo limite (preferencialemente sendo de abaixo de 1,5°C), deveria se sustentar até 2100. Contudo, vemos que já no ano de 2024, estamos acima do desejável, sendo que, de acordo com projeções, atinigiremos o limite de 2100 em torno de 70 anos antes. Além disso, se o cenário de emissões se manter <span class="font-bold">intermediário</span>, teremos o terrível número apontado em 2050. Em cenários mais pessimistas, de <span class="font-bold">emissões altas</span>, poderemos chegar ao número de <span class="font-bold">5,7°C</span> acima dos níveis pré-industriais.</p>
+            <p class="text-gray-200/90 font-text text-lg sm:text-center lg:text-left"> Nele podemos ver em primeira
+                instância, o limite de temperatura imposto pelo acordo de Paris, sendo que esse mesmo limite
+                (preferencialemente sendo de abaixo de 1,5°C), deveria se sustentar até 2100. Contudo, vemos que já no
+                ano de 2024, estamos acima do desejável, sendo que, de acordo com projeções, atinigiremos o limite de
+                2100 em torno de 70 anos antes. Além disso, se o cenário de emissões se manter <span
+                    class="font-bold">intermediário</span>, teremos o terrível número apontado em 2050. Em cenários mais
+                pessimistas, de <span class="font-bold">emissões altas</span>, poderemos chegar ao número de <span
+                    class="font-bold">5,7°C</span> acima dos níveis pré-industriais.</p>
         </div>
 
-        
+
 
         <section class="max-w-7xl max-h-auto py-32 flex flex-row font-text sm:text-center md:px-8">
             <div class="max-w-full mx-auto flex flex-col justify-start gap-4 items-start lg:text-left">
@@ -265,30 +285,79 @@
     </section>
 
     <section class="flex flex-col max-w-full pt-10 pb-10 items-center justify-center bg-main-green rounded-t-3xl">
-        <section class="max-w-7xl max-h-auto py-5 flex flex-row font-text ">
-            <div class="max-w-full flex flex-col gap-12 ">
-                <h1 class="font-title font-semibold leading-tight sm:text-3xl sm:text-center lg:text-left lg:text-4xl xl:text-5xl">PARTICIPE E CONCLUA OS CURSOS PARA
+        <div class="max-w-7xl max-h-auto py-5 flex flex-row font-text xl:px-6">
+            <div class="max-w-full flex flex-col gap-12">
+                <h1
+                    class="font-title font-semibold sm:text-3xl sm:px-4 sm:text-center md:text-4xl lg:text-left lg:text-4xl xl:text-5xl">
+                    PARTICIPE E CONCLUA OS CURSOS PARA
                     RECEBER
                     UMA ECOBAG,
                     NECESSAIRE E UMA MUDA DE PLANTA!! </h1>
 
-                <p class="text-second-green font-text text-3xl sm:text-2xl sm:text-center lg:text-left">Conclua nossa trilha de cursos para receber os
-                    brindes e
-                    um
-                    certificado de participação para colocar no currículo e compartilhar nas redes sociais.</p>
+                <p class="text-second-green font-text text-3xl sm:text-xl sm:px-3 sm:text-center md:text-2xl lg:text-left">
+                    Preencha o formulário abaixo para nos conhecermos melhor e receber acesso aos cursos! Conclua nossa
+                    trilha de cursos para receber os brindes e um certificado de participação para colocar no currículo
+                    e compartilhar nas redes sociais.</p>
 
-                <div class="mt-4 sm:justify-center flex lg:justify-start"> <a href=""
-                        class="p-5 font-bold text-xl bg-second-green rounded-3xl text-white hover:bg-main-green hover:border-second-green hover:text-black hover:border transition-all">QUERO
-                        PARTICIPAR!</a>
+                <div class="flex xl:flex-row max-w-full sm:flex-col sm:px-7 lg:justify-center lg:items-center xl:items-start xl:justify-around 2xl:justify-between">
+                    <div class="form-bg-yellow py-5 px-12 flex flex-col items-start justify-center gap-4 lg:w-1/2 xl:w-auto">
+                        <h1 class="text-black font-bold text-2xl w-full text-nowrap">Preencha o formulário</h1>
+                        <form class="flex flex-col gap-3 w-full items-center justify-center">
+
+                            <p class="font-text font-semibold text-base text-black w-full text-start">Nome do funcionário</p>
+
+                            <input type="text" name="nome-funcionario" placeholder="Igor guilherme" value=""
+                                class="w-full p-3 border border-second-green rounded-2xl bg-transparent backdrop-blur-sm text-black placeholder:text-black focus:outline-none focus:border-second-green"
+                                required>
+
+                            <p class="font-text font-semibold text-base text-black w-full text-start">Tipo de Transporte</p>
+
+                            <input type="text" name="nome-empresa" placeholder="Ex: Bicicleta"
+                                class="w-full p-3 border border-second-green rounded-2xl bg-transparent backdrop-blur-sm text-black placeholder:text-black focus:outline-none focus:border-second-green"
+                                required>
+
+                            <p class="font-text font-semibold text-base text-black w-full text-start">Tipo de alimentação</p>
+
+                            <input type="email" name="email" placeholder="Ex: Vegetariano"
+                                class="w-full p-3 border border-second-green rounded-2xl bg-transparent backdrop-blur-sm text-black placeholder:text-black focus:outline-none focus:border-second-green"
+                                required>
+
+                            <p class="font-text font-semibold text-base text-black w-full text-start">Email</p>
+
+                            <input type="text" name="cnpj" placeholder="Ex: guilhermesergio4m@..."
+                                class="w-full p-3 border border-second-green rounded-2xl bg-transparent backdrop-blur-sm text-black placeholder:text-black focus:outline-none focus:border-second-green"
+                                required>
+
+                            <button type="submit"
+                                class="w-full transition-all py-3 mt-4 border border-second-green bg-second-green text-white font-bold rounded-2xl hover:border hover:border-second-green hover:text-black focus:outline-none hover:bg-transparent">Quero
+                                Participar!</button>
+                        </form>
+                    </div>
+
+                    <div class="grid grid-rows-2 grid-flow-col gap-4 sm:hidden xl:grid">
+                        <div class="row-span-1">
+                            <img src="./imgs/mockup-ecobag-voltaris-green-section.png" alt="mockup voltaris na ecobag branca" class="h-full w-full">
+                        </div>
+
+                        <div class="">
+                            <img src="./imgs/img-planta-green-section.png" alt="imagem de uma mao segurando um vaso com uma planta" class="h-full w-full">    
+                        </div>
+
+                        <div class="row-span-2">
+                            <img src="./imgs/mockup-voltaris-necessaire-green-section.png" alt="" class="h-full w-full">
+                        </div>
+                      </div>
+
                 </div>
             </div>
-        </section>
+        </div>
     </section>
 
     <section class="flex flex-col max-w-full pt-10 pb-10 items-center justify-between form-container-bg">
         <section class="max-w-7xl max-h-auto py-32 flex flex-row font-text">
             <div class="max-w-full mx-auto flex flex-col justify-start gap-4 items-start">
-                <h1 class="text-main-green font-title text-6xl lead sm:text-5xl sm:text-center">Para empresas interessadas em fazer a
+                <h1 class="text-main-green font-title text-6xl lead sm:text-5xl sm:text-center">Para empresas
+                    interessadas em fazer a
                     diferença:
                     <span class="text-white"> preencha o formulário de contato abaixo.</span>
                 </h1>
@@ -296,7 +365,7 @@
         </section>
 
         <section class="flex flex-row gap-10 sm:flex-col 2xl:flex-row 2xl:mb-8">
-            <div class="form-bg py-5 px-12 flex flex-col items-start justify-center gap-4">
+            <div class="form-bg py-5 px-12 flex flex-col items-start justify-center gap-4 border border-yellow-600">
                 <h1 class="text-main-green font-bold text-2xl w-full text-nowrap">Preencha o formulário</h1>
                 <form class="flex flex-col gap-3 w-full items-center justify-center">
 
@@ -325,7 +394,7 @@
                         required>
 
                     <button type="submit"
-                        class="w-full py-3 mt-4 bg-main-green text-black font-bold rounded-2xl hover:border hover:border-main-green hover:text-white focus:outline-none hover:bg-transparent">Enviar</button>
+                        class="w-full border border-main-green transition-all py-3 mt-4 bg-main-green text-black font-bold rounded-2xl hover:border hover:border-main-green hover:text-white focus:outline-none hover:bg-transparent">Enviar</button>
                 </form>
             </div>
 
@@ -359,6 +428,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./js/scroll.js"></script>
+    <script src="./js/carrossel.js"></script>
     <script src="./js/sanduiche.js"></script>
     <script src="./js/grafico.js"></script>
 
