--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,10 @@
 
                 <!-- Menu para telas grandes -->
                 <nav class="hidden md:flex space-x-8 font-text text-lg lg:text-xl transition-colors">
-                    <a href="#" class="text-white hover:text-main-green">Home</a>
-                    <a href="#" class="text-white hover:text-main-green">Sobre</a>
-                    <a href="#" class="text-white hover:text-main-green">Serviços</a>
-                    <a href="#" class="text-white hover:text-main-green">Contato</a>
+                    <a href="#transicaoEnergetica" class="text-white hover:text-main-green">Conscientização</a>
+                    <a href="#sobreNos" class="text-white hover:text-main-green">Sobre</a>
+                    <a href="#cursos" class="text-white hover:text-main-green">Serviços</a>
+                    <a href="#contato" class="text-white hover:text-main-green">Contato</a>
                 </nav>
 
 
@@ -51,10 +51,10 @@
             <div id="mobileMenu" class="md:hidden hidden ">
                 <nav
                     class="space-y-4 flex flex-col p-4 mt-4 w-full font-text bg-[rgba(77,41,93,0.46)] rounded-[16px] shadow-[0_4px_30px_rgba(0,0,0,0.1)] backdrop-blur-[12.9px] border border-[rgba(77,41,93,1)]">
-                    <a href="#" class="text-white hover:text-main-green text-right ">Home</a>
-                    <a href="#" class="text-white hover:text-main-green text-right">Sobre</a>
-                    <a href="#" class="text-white hover:text-main-green text-right">Serviços</a>
-                    <a href="#" class="text-white hover:text-main-green text-right">Contato</a>
+                    <a href="#transicaoEnergetica" class="text-white hover:text-main-green text-right ">Conscientização</a>
+                    <a href="#sobreNos" class="text-white hover:text-main-green text-right">Sobre</a>
+                    <a href="#cursos" class="text-white hover:text-main-green text-right">Serviços</a>
+                    <a href="#contato" class="text-white hover:text-main-green text-right">Contato</a>
                 </nav>
             </div>
         </header>
@@ -72,7 +72,7 @@
         </div>
     </section>
 
-    <section class="max-w-full max-h-auto bg-dark-bg pt-24 flex flex-row justify-around">
+    <section class="max-w-full max-h-auto bg-dark-bg pt-24 flex flex-row justify-around" id="transicaoEnergetica">
         <div
             class="max-w-full mx-auto flex justify-center gap-4 items-center sm:flex-col sm:text-center lg:text-left 2xl:flex-row 2xl:px-28">
             <section class=" text-white flex flex-col gap-8 sm:mb-8 w-1/2">
@@ -96,7 +96,7 @@
                         energias como estas é investir em um futuro limpo, sustentável e seguro, onde a energia se torna
                         uma aliada do meio ambiente e da sociedade.
                     </p>
-                    <p class="font-bold text-xl text-white">VENHA COM NÓS E RECEBA UM BRINDES E UM CERTIFICADO</p>
+                    <p class="font-bold text-xl text-white">VENHA COM NÓS E RECEBA UM BRINDE E UM CERTIFICADO</p>
                     <div class="mt-10">
                         <a href=""
                             class="py-4 px-3 border border-main-green font-bold text-xl bg-main-green rounded-3xl text-black hover:bg-dark-bg hover hover:border-main-green hover:text-white hover:border transition-all">Quero
@@ -113,7 +113,7 @@
         </div>
     </section>
 
-    <section class="max-w-full max-h-auto bg-dark-bg flex flex-row justify-around">
+    <section class="max-w-full max-h-auto bg-dark-bg flex flex-row justify-around" id="sobreNos">
         <div class="max-w-7xl mx-auto flex justify-between gap-4 items-center">
             <div class="gap-2 flex flex-col mt-32 text-white text-center md:p-2">
                 <h1 class="text-5xl font-title">Sobre <span class="text-main-green">nós</span></h1>
@@ -247,7 +247,7 @@
                 período pré-industrial:</p>
         </section>
 
-        <div class="chart-container max-w-2xl flex flex-col mt-12 items-center justify-center gap-4 p-3">
+        <section class="chart-container max-w-2xl flex flex-col mt-12 items-center justify-center gap-4 p-3">
             <canvas id="line-chart"></canvas>
 
             <p class="text-gray-200/90 font-text text-lg sm:text-center lg:text-left"> Nele podemos ver em primeira
@@ -258,7 +258,7 @@
                     class="font-bold">intermediário</span>, teremos o terrível número apontado em 2050. Em cenários mais
                 pessimistas, de <span class="font-bold">emissões altas</span>, poderemos chegar ao número de <span
                     class="font-bold">5,7°C</span> acima dos níveis pré-industriais.</p>
-        </div>
+        </section>
 
 
 
@@ -284,7 +284,7 @@
         </section>
     </section>
 
-    <section class="flex flex-col max-w-full pt-10 pb-10 items-center justify-center bg-main-green rounded-t-3xl">
+    <section class="flex flex-col max-w-full pt-10 pb-10 items-center justify-center bg-main-green rounded-t-3xl" id="cursos">
         <div class="max-w-7xl max-h-auto py-5 flex flex-row font-text xl:px-6">
             <div class="max-w-full flex flex-col gap-12">
                 <h1
@@ -364,7 +364,7 @@
             </div>
         </section>
 
-        <section class="flex flex-row gap-10 sm:flex-col 2xl:flex-row 2xl:mb-8">
+        <section class="flex flex-row gap-10 sm:flex-col 2xl:flex-row 2xl:mb-8" id="contato">
             <div class="form-bg py-5 px-12 flex flex-col items-start justify-center gap-4 border border-yellow-600">
                 <h1 class="text-main-green font-bold text-2xl w-full text-nowrap">Preencha o formulário</h1>
                 <form class="flex flex-col gap-3 w-full items-center justify-center">
