Organizando pastas e arquivos

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page GS</title>
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./scroll.css">
-    <link rel="stylesheet" href="./form.css">
-    <link rel="stylesheet" href="./arrow.css">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/scroll.css">
+    <link rel="stylesheet" href="./css/form.css">
+    <link rel="stylesheet" href="./css/arrow.css">
 </head>
 
 <body class="bg-dark-bg">
 
     <section class="max-w-full">
         <video class="absolute top-0 left-0 w-full h-full object-cover -z-10" autoplay muted loop>
-            <source src="./videos/bg-video-energy.mp4" type="video/mp4">
+            <source src="./src/videos/bg-video-energy.mp4" type="video/mp4">
             Seu navegador não suporta o elemento de vídeo.
         </video>
 
@@ -23,7 +23,7 @@
             <div class="max-w-7xl mx-auto flex items-center justify-between">
                 <!-- Logo -->
                 <div>
-                    <a href=""><img src="./imgs/Logo_voltaris_verde.png" alt="Logo voltaris verde"></a>
+                    <a href=""><img src="./src/imgs/Logo_voltaris_verde.png" alt="Logo voltaris verde"></a>
                 </div>
 
                 <!-- Menu para telas grandes -->
@@ -106,7 +106,7 @@
             </section>
 
             <section class="w-auto">
-                <img src="./imgs/transicao-energetica-ilustracao.png"
+                <img src="./src/imgs/transicao-energetica-ilustracao.png"
                     alt="Imagem Ilustrada sobre a transição enerrgética e seu ecossistema. sol, prédios, casas, energia eólica, energia solar.">
             </section>
 
@@ -128,7 +128,7 @@
         <div class="max-w-7xl mx-auto flex flex-row justify-between gap-5 text-white">
             <section class="w-full flex flex-row gap-10 sm:flex-col lg:flex-row">
                 <div class="img w-1/2 flex flex-col gap-4 hidden-left sm:order-3 lg:order-1 sm:w-full">
-                    <img src="./imgs/linha-do-tempo-fourier.png"
+                    <img src="./src/imgs/linha-do-tempo-fourier.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="sm:mx-auto">
                     <p
                         class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base sm:max-w-xs">
@@ -154,7 +154,7 @@
                 <div class="linha-do-tempo-line h-full w-1 bg-gray-50/55 sm:hidden lg:flex"></div>
 
                 <div class="img w-1/2 flex flex-col gap-4 hidden-right">
-                    <img src="./imgs/linha-do-tempo-svante-arrhenius.png"
+                    <img src="./src/imgs/linha-do-tempo-svante-arrhenius.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="max-w-md">
                     <p
                         class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
@@ -168,7 +168,7 @@
         <div class="max-w-7xl mx-auto flex flex-row justify-between gap-5 text-white">
             <section class="w-full flex flex-row gap-10 sm:flex-col items-center lg:flex-row">
                 <div class="img w-1/2 flex flex-col gap-4 hidden-left sm:order-3 lg:order-1">
-                    <img src="./imgs/linha-do-tempo-efeito-estufa.png"
+                    <img src="./src/imgs/linha-do-tempo-efeito-estufa.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="max-w-md">
                     <p
                         class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
@@ -195,7 +195,7 @@
                 <div class="linha-do-tempo-line h-full w-1 bg-gray-50/55 sm:hidden lg:flex"></div>
 
                 <div class="img w-1/2 flex flex-col gap-4 hidden-right">
-                    <img src="./imgs/linha-do-tempo-IPCC.png"
+                    <img src="./src/imgs/linha-do-tempo-IPCC.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="max-w-md">
                     <p
                         class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
@@ -210,7 +210,7 @@
         <div class="max-w-7xl mx-auto flex flex-row justify-between gap-5 text-white">
             <section class="w-full flex flex-row gap-10 sm:flex-col items-center lg:flex-row">
                 <div class="img w-1/2 flex flex-col gap-4 hidden-left sm:order-3 lg:order-1">
-                    <img src="./imgs/linha-do-tempo-kyoto.png"
+                    <img src="./src/imgs/linha-do-tempo-kyoto.png"
                         alt="Imagem de Joseph Fourier, que descreveu o efeito estufa" class="max-w-md">
                     <p
                         class="font-text text-base max-w-lg text-gray-200/90 sm:text-center 2xl:text-left sm:text-sm md:text-base">
@@ -336,15 +336,15 @@
 
                     <div class="grid grid-rows-2 grid-flow-col gap-4 sm:hidden xl:grid">
                         <div class="row-span-1">
-                            <img src="./imgs/mockup-ecobag-voltaris-green-section.png" alt="mockup voltaris na ecobag branca" class="h-full w-full">
+                            <img src="./src/imgs/mockup-ecobag-voltaris-green-section.png" alt="mockup voltaris na ecobag branca" class="h-full w-full">
                         </div>
 
                         <div class="">
-                            <img src="./imgs/img-planta-green-section.png" alt="imagem de uma mao segurando um vaso com uma planta" class="h-full w-full">    
+                            <img src="./src/imgs/img-planta-green-section.png" alt="imagem de uma mao segurando um vaso com uma planta" class="h-full w-full">    
                         </div>
 
                         <div class="row-span-2">
-                            <img src="./imgs/mockup-voltaris-necessaire-green-section.png" alt="" class="h-full w-full">
+                            <img src="./src/imgs/mockup-voltaris-necessaire-green-section.png" alt="" class="h-full w-full">
                         </div>
                       </div>
 
@@ -404,11 +404,11 @@
                 <div class="flex flex-col gap-4 sm:gap-8">
                     <p class="text-white font-bold text-2xl font-text">@voltarisorg</p>
                     <div class="flex flex-row gap-5 transition-all">
-                        <a href=""><img src="./imgs/instagram-icon-green.png" alt="Icone Instagram verde"
+                        <a href=""><img src="./src/imgs/instagram-icon-green.png" alt="Icone Instagram verde"
                                 class="hover:scale-105"></a>
-                        <a href=""><img src="./imgs/linkedin-icon-green.png" alt="Icone Linkedin verde"
+                        <a href=""><img src="./src/imgs/linkedin-icon-green.png" alt="Icone Linkedin verde"
                                 class="hover:scale-105"></a>
-                        <a href=""><img src="./imgs/x--icon-green.png" alt="Icone X(twitter) verde"
+                        <a href=""><img src="./src/imgs/x--icon-green.png" alt="Icone X(twitter) verde"
                                 class="hover:scale-105"></a>
                     </div>
                 </div>
@@ -418,7 +418,7 @@
 
     <footer class="max-w-full bg-footer-gray rounded-t-xl -mt-2 flex flex-row p-5 justify-around">
         <div class="flex flex-row items-end gap-1">
-            <img src="./imgs/voltaris-logo-white.png" alt=" Logo Voltaris branca" class="">
+            <img src="./src/imgs/voltaris-logo-white.png" alt=" Logo Voltaris branca" class="">
             <p class="font-title text-white font-bold text-xl">Voltaris</p>
         </div>
         <div class="flex flex-row items-end gap-1">
